Fix dissertation title visibility in dark mode

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -100,6 +100,10 @@ body.dark-mode {
       color: #e4e4e4;
     }
 
+    em {
+      color: #fff;
+    }
+
     a {
       color: #fff;
 
